Fix some invisible borders in AMOLED themes

--- a/public/stylesheets/glyphs.css
+++ b/public/stylesheets/glyphs.css
@@ -1017,7 +1017,9 @@
 }
 
 .t-s6 .c-glyph-choice-icon,
-.t-s10 .c-glyph-choice-icon {
+.t-s10 .c-glyph-choice-icon,
+.t-amoled .c-glyph-choice-icon,
+.t-amoled-metro .c-glyph-choice-icon {
   border: 0.1rem solid white;
   box-shadow: 0 0 0.5rem;
 }
@@ -1034,7 +1036,9 @@
 }
 
 .t-s6 .c-glyph-choice-effect-list,
-.t-s10 .c-glyph-choice-effect-list {
+.t-s10 .c-glyph-choice-effect-list,
+.t-amoled .c-glyph-choice-effect-list,
+.t-amoled-metro .c-glyph-choice-effect-list {
   border: 0.1rem solid white;
 }
 
